--- a/.github/workflows/ci-retrain.yml
+++ b/.github/workflows/ci-retrain.yml
@@ -53,21 +53,66 @@ jobs:
             --experiment-name=Heart_Disease_Classification \
             --env-manager=local   # penting: paksa local venv, bukan conda
 
-      - name: Get Latest Run Info
-        id: runinfo
+      - name: Find Best Model File (Most Reliable Way)
+        id: bestmodel
+        run: |
+          cd ${{ env.WORKING_DIR }}/data
+          BEST_FILE=$(ls best_model_*.pkl | head -1)
+          if [ -z "$BEST_FILE" ]; then
+            echo "ERROR: No best_model_*.pkl found!"
+            exit 1
+          fi
+          BEST_NAME=$(echo $BEST_FILE | sed 's/best_model_//' | sed 's/\.pkl$//')
+          echo "Found best model: $BEST_NAME ($BEST_FILE)"
+          echo "file=$BEST_FILE" >> $GITHUB_OUTPUT
+          echo "name=$BEST_NAME" >> $GITHUB_OUTPUT
+
+      - name: Build & Push Docker Image (Fallback Manual - 100% Reliable)
+        env:
+          IMAGE: ${{ secrets.DOCKER_USERNAME }}/heart-disease-model
+          BEST_MODEL_FILE: ${{ steps.bestmodel.outputs.file }}
+          BEST_MODEL_NAME: ${{ steps.bestmodel.outputs.name }}
         run: |
           cd ${{ env.WORKING_DIR }}
-          python - <<EOF
-          import mlflow, os
-          client = mlflow.MlflowClient(tracking_uri="file:./mlruns")
-          exp = client.get_experiment_by_name("Heart_Disease_Classification")
-          runs = client.search_runs(exp.experiment_id, order_by=["start_time DESC"], max_results=1)
-          run = runs[0]
-          best = run.data.params.get("best_model_name", "Unknown")
-          print(f"run_id={run.info.run_id}", file=open(os.environ["GITHUB_OUTPUT"], "a"))
-          print(f"best_model={best}", file=open(os.environ["GITHUB_OUTPUT"], "a"))
-          print(f"Latest Run: {run.info.run_id} | Best: {best}")
+
+          echo "Using best model: $BEST_MODEL_NAME ($BEST_MODEL_FILE)"
+
+          cat > Dockerfile <<EOF
+          FROM python:3.12-slim
+          WORKDIR /app
+
+          RUN pip install --no-cache-dir \
+              mlserver==1.5.0 \
+              mlserver-mlflow==1.5.0 \
+              scikit-learn pandas numpy
+
+          # Copy model dan mlruns
+          COPY $BEST_MODEL_FILE /app/model.pkl
+          COPY mlruns /app/mlruns
+
+          ENV MLSERVER_MODEL_URI=/app/model.pkl
+          ENV MLSERVER_MODEL_NAME=heart-disease
+          ENV MLSERVER_HTTP_PORT=8080
+
+          EXPOSE 8080
+          CMD ["mlserver", "start", "/app"]
           EOF
+
+          docker build -t $IMAGE:latest .
+
+          TAG=$(date +%Y%m%d%H%M)
+          RUN_ID=$(ls mlruns/*/ | head -1 | cut -c1-8)
+
+          docker tag $IMAGE:latest $IMAGE:$TAG
+          docker tag $IMAGE:latest $IMAGE:$RUN_ID
+
+          echo "Pushing Docker images..."
+          docker push $IMAGE:latest
+          docker push $IMAGE:$TAG
+          docker push $IMAGE:$RUN_ID
+
+          echo "IMAGE_LATEST=$IMAGE:latest" >> $GITHUB_ENV
+          echo "IMAGE_TAG=$IMAGE:$TAG" >> $GITHUB_ENV
 
       - name: Setup Docker
         uses: docker/setup-buildx-action@v3
@@ -128,6 +173,12 @@ jobs:
 
       - name: Summary
         run: |
-          echo "## Pipeline Success!" >> $GITHUB_STEP_SUMMARY
-          echo "- Best Model: **${{ steps.runinfo.outputs.best_model }}**" >> $GITHUB_STEP_SUMMARY
-          echo "- Image: \`${{ env.IMAGE_LATEST }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "## CI/CD Pipeline Berhasil!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Best Model: **${{ steps.bestmodel.outputs.name }}**" >> $GITHUB_STEP_SUMMARY
+          echo "Docker Image: \`${{ env.IMAGE_LATEST }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ${{ env.IMAGE_LATEST }}" >> $GITHUB_STEP_SUMMARY
+          echo "docker run -p 8080:8080 ${{ env.IMAGE_LATEST }}" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
