--- a/.github/workflows/ci-retrain.yml
+++ b/.github/workflows/ci-retrain.yml
@@ -67,27 +67,25 @@ jobs:
           echo "file=$BEST_FILE" >> $GITHUB_OUTPUT
           echo "name=$BEST_NAME" >> $GITHUB_OUTPUT
 
-      - name: Build & Push Docker Image (Fallback Manual - 100% Reliable)
+      - name: Build & Push Docker Image
         env:
           IMAGE: ${{ secrets.DOCKER_USERNAME }}/heart-disease-model
-          BEST_MODEL_FILE: ${{ steps.bestmodel.outputs.file }}
-          BEST_MODEL_NAME: ${{ steps.bestmodel.outputs.name }}
         run: |
           cd ${{ env.WORKING_DIR }}
 
-          echo "Using best model: $BEST_MODEL_NAME ($BEST_MODEL_FILE)"
-
-          cat > Dockerfile <<EOF
+          cat > Dockerfile <<'EOF'
           FROM python:3.12-slim
           WORKDIR /app
 
           RUN pip install --no-cache-dir \
               mlserver==1.5.0 \
               mlserver-mlflow==1.5.0 \
-              scikit-learn pandas numpy
+              scikit-learn==1.5.0 \
+              pandas \
+              numpy
 
-          # Copy model dan mlruns
-          COPY $BEST_MODEL_FILE /app/model.pkl
+          # Copy satu-satunya file best_model dari folder data/
+          COPY data/best_model_*.pkl /app/model.pkl
           COPY mlruns /app/mlruns
 
           ENV MLSERVER_MODEL_URI=/app/model.pkl
@@ -106,14 +104,11 @@ jobs:
           docker tag $IMAGE:latest $IMAGE:$TAG
           docker tag $IMAGE:latest $IMAGE:$RUN_ID
 
-          echo "Pushing Docker images..."
           docker push $IMAGE:latest
           docker push $IMAGE:$TAG
           docker push $IMAGE:$RUN_ID
 
           echo "IMAGE_LATEST=$IMAGE:latest" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$IMAGE:$TAG" >> $GITHUB_ENV
-
       - name: Setup Docker
         uses: docker/setup-buildx-action@v3
 
