--- a/MLProject/requirements.txt
+++ b/MLProject/requirements.txt
@@ -1,11 +1,11 @@
 # MLProject/requirements.txt
-mlflow>=2.0
-scikit-learn
+mlflow>=2.8
+scikit-learn==1.5.1
 pandas
 numpy
 matplotlib
 seaborn
 python-dotenv
 dagshub
-mlserver==1.5.0
-mlserver-mlflow==1.5.0
+mlserver==1.7.1
+mlserver-mlflow==1.7.1
